--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@ http://www.tooplate.com/view/2082-pure-mix
 		<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="1.6s">
 			<h1>Kunlaya Kobunnoi</h1>
 			<p>A student at BCIT who is in web and mobile option. She is studying at level3 right now. Hoping to finish her diploma next year.</p>
-			<blockquote>I think that do what you love will make your everyday fun. Something productive and beneficial.</blockquote>
+			<blockquote>Do what you love so you won't make feel like you work a day. BECAUSE no one is hiring you. </blockquote>
 			<img src="images/kunlaya1.jpg" class="img-responsive" alt="About">
 
 			<!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
